tests/src/frontend/typechecking/invalid/fun_generic_as_expression.sk
fun foo<T>(): void {
  _ = T;
  void
}
